# uniprot.rs

./: .gitignore  .travis.yml  CHANGELOG.md  COPYING  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: test.yml
benches/: bench.rs  uniprot.rs  uniref.rs
ci/travis/: script.sh  setup.sh
src/: error.rs  lib.rs  model.rs  parser.rs
src/common/: date.rs  mod.rs  property.rs  sequence.rs
src/model/: db_reference.rs  evidence.rs  feature.rs  feature_location.rs  gene.rs  gene_location.rs  keyword.rs  mod.rs  molecule.rs  organism.rs  property.rs  protein.rs  reference.rs  sequence.rs
src/model/comment/: alternative_product.rs  bpc_properties.rs  catalytic_activity.rs  cofactor.rs  conflict.rs  disease.rs  interaction.rs  isoform.rs  mod.rs  online_information.rs  subcellular_location.rs
src/parser/: consumer.rs  macros.rs  mod.rs  producer.rs  utils.rs  worker.rs
src/uniparc/: mod.rs
src/uniparc/model/: db_reference.rs  ipr.rs  location.rs  mod.rs  sigseq.rs
src/uniprot/: mod.rs
src/uniprot/model/: db_reference.rs  evidence.rs  feature.rs  feature_location.rs  gene.rs  gene_location.rs  keyword.rs  ligand.rs  ligand_part.rs  mod.rs  molecule.rs  organism.rs  protein.rs  reference.rs  sequence.rs
src/uniprot/model/comment/: alternative_product.rs  bpc_properties.rs  catalytic_activity.rs  cofactor.rs  conflict.rs  disease.rs  interaction.rs  mass_spectrometry.rs  mod.rs  online_information.rs  subcellular_location.rs
src/uniref/: mod.rs
src/uniref/model/: date.rs  member.rs  mod.rs  property.rs  reference.rs  sequence.rs
tests/: uniprot.xml
