[package]
name = "uniprot"
version = "0.1.0"
authors = ["Martin Larralde <martin.larralde@ens-paris-saclay.fr>"]
edition = "2018"
license = "MIT"
description = "Rust data structures and parser for the Uniprot database(s)."
repository = "https://github.com/althonos/uniprot.rs"
homepage = "https://github.com/althonos/uniprot.rs"
readme = "README.md"
keywords = ["uniprot", "uniprotkb", "swissprot", "trembl", "parser"]
categories = ["science"]

[badges.travis-ci]
repository = "althonos/uniprot.rs"
[badges.codecov]
repository = "althonos/uniprot.rs"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/uniprot.rs"
[badges.maintenance]
status     = "as-is"

[dependencies]
bytes = "0.5.3"
err-derive = "0.2.1"
fnv = "1.0.6"
quick-xml = "0.17.2"
url = "2.1.1"

[dev-dependencies]
ftp = "3.0.1"
libflate = "0.1.27"
[dev-dependencies.reqwest]
version = "0.10.0"
features = ["blocking"]
default-features = false
