[package]
name = "uniprot"
version = "0.6.0"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
edition = "2018"
license = "MIT"
description = "Rust data structures and parser for the Uniprot database(s)."
repository = "https://github.com/althonos/uniprot.rs"
homepage = "https://github.com/althonos/uniprot.rs"
readme = "README.md"
keywords = ["uniprotkb", "uniref", "swissprot", "trembl", "parser"]
categories = ["science", "parser-implementations"]
exclude = ["tests/*.xml"]

[badges.travis-ci]
repository = "althonos/uniprot.rs"
[badges.codecov]
repository = "althonos/uniprot.rs"
service    = "github"
[badges.is-it-maintained-issue-resolution]
repository = "althonos/uniprot.rs"
[badges.maintenance]
status     = "as-is"

[dependencies]
chrono = "0.4.31"
fnv = "1.0.6"
memchr = "2.6.4"
quick-xml = "0.30.0"
[dependencies.url]
version = "2.4.1"
optional = true
[dependencies.lazy_static]
version = "1.4.0"
optional = true
[dependencies.num_cpus]
version = "1.12.0"
optional = true
[dependencies.crossbeam-channel]
version = "0.5.8"
optional = true

[dev-dependencies]
ftp = "3.0.1"
libflate = "2.0.0"
ureq = "2.4.0"

[features]
url-links = ["url"]
threading = ["crossbeam-channel", "lazy_static", "num_cpus"]
default = ["threading"]
